<resources>
    <string name="app_name">Safekiddo - Test App</string>
    <string name="news">Wiadomości</string>
    <string name="create_news">Nowa wiadomość</string>
    <string name="message_cannot_fetch_news">Nie udało się pobrać wiadomości</string>
    <string name="message_no_internet">Sprawdź połączenie z internetem</string>
    <string name="news_details">Szczegóły</string>
    <string name="label_edit">Edytuj</string>
    <string name="label_delete">Usuń</string>
    <string name="label_save">Zapisz</string>
    <string name="format_title_characters_count">Liczba znaków w opisie: %d</string>
    <string name="hint_title">Tytuł</string>
    <string name="hint_description">Opis</string>
    <string name="message_error">Błąd</string>
    <string name="message_news_saved">Zapisano</string>
    <string name="title_warning">Uwaga</string>
    <string name="message_delete_news">Czy na pewno chcesz usunąć wiadomość?</string>
    <string name="delete">Usuń</string>
    <string name="cancel">Anuluj</string>
    <string name="message_deleted">Usunięto</string>
    <string name="title_from_gallery">Z galerii</string>
    <string name="title_take_picture">Zrób zdjęcie</string>
    <string name="title_change_photo">Zmień zdjęcie</string>
    <string name="message_no_news">Brak wiadomości</string>
</resources>