<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <group
        android:id="@+id/menu_news_details_edit_group"
        android:visible="false"
        tools:visible="true">
        <item
            android:id="@+id/menu_news_details_delete"
            android:icon="@drawable/ic_delete"
            android:title="@string/label_delete"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/menu_news_details_change_photo"
            android:icon="@drawable/ic_add_photo"
            android:title="@string/title_change_photo"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/menu_news_details_apply_changes"
            android:icon="@drawable/ic_done"
            android:title="@string/label_save"
            app:showAsAction="ifRoom" />
    </group>

    <item
        android:id="@+id/menu_news_details_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/label_edit"
        app:showAsAction="ifRoom" />
</menu>