<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_normal"
        android:text="@string/title_change_photo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_change_news_photo_from_gallery_button"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_photo_library"
        android:drawablePadding="@dimen/padding_normal"
        android:padding="@dimen/padding_big"
        android:text="@string/title_from_gallery"
        app:drawableTint="@color/color_on_background" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_change_news_photo_take_photo_button"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_camera"
        android:drawablePadding="@dimen/padding_normal"
        android:padding="@dimen/padding_big"
        android:text="@string/title_take_picture"
        app:drawableTint="@color/color_on_background" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_change_news_photo_delete_button"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_delete"
        android:drawablePadding="@dimen/padding_normal"
        android:padding="@dimen/padding_big"
        android:text="@string/delete"
        app:drawableTint="@color/color_on_background" />

</androidx.appcompat.widget.LinearLayoutCompat>